--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "azproduction.ru",
   "subdomain": "azproduction",
+  "domains": [
+    "azproduction.ru"
+  ],
   "scripts": {
     "start": "server.js"
   },
-  "version": "0.0.0",
+  "version": "0.0.0-1",
   "engines": {
     "node": "0.8.x"
   },
